--- a/solar_site/main/templates/index.html
+++ b/solar_site/main/templates/index.html
@@ -575,7 +575,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-white fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#home">
-      <img src="{% static 'images/SolartechGen-logo.png' %}" alt="Solar Tech Gen" class="logo" height="600">
+      <img src="{% static 'images/SolartechGenlogo.PNG' %}" alt="Solar Tech Gen" class="logo" height="600">
+
       
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -741,9 +742,17 @@
           </div>
         </div>
       </div>
-      
+      <!-- Add this temporarily to check if static files are loading -->
+<div style="display: none;">
+    Static URL: {% static '' %}
+    Image path: {% static 'images/SolartechGen-logo.png' %}
+</div>
       <div class="col-lg-6">
-        <img src="{% static 'images/technician-3936982_960_720.jpg' %}" alt="Why Choose Us" class="img-fluid rounded shadow">
+        <img src="{% static 'images/technician-3936982_960_720.jpg' %}" 
+     alt="Why Choose Us" 
+     class="img-fluid rounded shadow">
+     <p class="mt-3">Our skilled technicians ensure seamless installation and maintenance of your solar systems.</p>
+
   </div>
 </section>
 
@@ -913,7 +922,7 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="footer-logo">
-          <img src="{% static 'images/SolartechGen-logo.png' %}" alt="Solar Tech Gen" height="70" class="me-2">
+          <img src="/static/images/SolartechGenlogo.PNG" alt="Solar Tech Gen" class="logo" height="600">
           Solar Tech Gen
         </div>
         <p>Leading the transition to clean, affordable solar energy with innovative solutions and exceptional customer service.</p>
